# confluence-mini-mcp

./: .gitignore  AGENTS.md  Justfile  README.md  confluence-mini-mcp-prd.md  pyproject.toml
src/confluence_mini_mcp/: __main__.py  cache.py  config.py  converter.py  crawler.py  directives.py  doctor.py  server.py
tests/: test_directives.py  test_link_extraction.py  test_tools.py
