[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-mini-mcp"
version = "0.2.0"
description = "Lightweight MCP server that crawls Confluence subtrees and serves cached Markdown"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
    "markdownify>=0.14",
]

[project.scripts]
confluence-mini-mcp = "confluence_mini_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_mini_mcp"]
